--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,9 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.11.0"
   }
 }
